Fix code block button's not showing up on mac

--- a/content/css/codeblock.css
+++ b/content/css/codeblock.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: 'Segoe MDL2';
+    src: url('../font/segmdl2.ttf');
+}
+
+.minimize, .cancel {
+    font-family: 'Segoe MDL2';
+    font-weight: bolder;
+}
+
+
 pre{
     margin: 0;
     padding: 0;
